Lagt til lovlige endringer med oversikt over årsaker som kan oppgis når oppgave settes på vent (fra under behandling).
